[tool.poetry]
name = "mcdalp"
version = "0.1.0"
description = "Mixed-integer Linear Programming (MILP) for ELECTRE/PROMETHEE method."
authors = ["marcol13 <marcinkrueger@gmail.com>"]
readme = "README.md"
license = "LICENSE"
keywords=["MCDA", "python", "electre", "milp", "ranking", "multi-criteria", "decision-making"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
numpy = "^1.26.4"
mcda = "0.6.1"
graphviz = "^0.20.3"
pulp = "^2.8.0"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pytest = "^8.1.1"

[tool.poetry.scripts]
mcdalp = "mcdalp.test:main"

[build-system]
requires = ["setuptools", "poetry-core"]
build-backend = "poetry.core.masonry.api"
